# CORE

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  wsgi.py
brain/src/brain_core/: config.py
brain/src/orchestration/: orchestrator.py  system_tool.py
